--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+    <div class="topinfoblock">
+        <div class="container">
+            <button class="closetrip">
+                <img src="img/new/close.svg" alt="close">
+            </button>
+            <p>
+                Welcome<br>
+                We Can't Wait to Show You Our Magnificent Shopping Site<br>
+                In the meantime, while we are under construction, don’t forget to wear your helmet!
+                <img src="img/new/hard-hat.svg" alt="">
+            </p>
+        </div>
+    </div>
     <header class="header">
         <div class="container">
             <div class="row align-items-center">
