--- a/my-account-personal-info.html
+++ b/my-account-personal-info.html
@@ -289,6 +289,21 @@
                                                 <a href="#">Edit</a>
                                             </div>
                                         </div>
+                                        <div class="personalinfobox">
+                                            <div class="updateava__left">
+                                                <div class="updateava__img">
+                                                    <img src="img/admin/userpic.png" alt="profile picture">
+                                                </div>
+                                                <div class="updateava__descr">
+                                                    <p class="title">Profile picture</p>
+                                                    <p>PNG, JPG up to 5MG</p>
+                                                </div>
+                                            </div>
+                                            <div class="updateava__right">
+                                                <input type="file" id="updateimg" accept="image/png, image/jpeg">
+                                                <label for="updateimg">Update</label>
+                                            </div>
+                                        </div>
 
 
                                     </div>
