--- a/sitemap.html
+++ b/sitemap.html
@@ -16,6 +16,9 @@
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
+                <li><a target="_blank" href="index.html">Main</a></li>
+                <li><a target="_blank" href="my-account-personal-info.html">My Account - Personal Info</a></li>
+                <br>
                 <li><a target="_blank" href="create-blog.html">Create Blog</a></li>
                 <li><a href="create-recipe.html" target="_blank">Create recipe</a></li>
                 <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account / Product list - Add
@@ -26,7 +29,6 @@
                     <h3>Updated pages</h3>
                 </li>
                 <li><a target="_blank" href="contact-us.html">Contact Us</a></li>
-                <li><a target="_blank" href="index.html">Main</a></li>
                 <li><a href="recipes-center.html" target="_blank">Recipes center</a></li>
                 <li><a href="recipes-center-selected-recipe.html" target="_blank">Recipes center (selected recipe)</a></li>
                 <li>
