--- a/sitemap.html
+++ b/sitemap.html
@@ -16,15 +16,19 @@
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
                 <li><h3>latest updates</h3></li>
-                <li><a target="_blank" href="index.html">Main</a></li>
+                <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
+
+
+
+                <!-- <li><a target="_blank" href="index.html">Main</a></li>
                 <li><a target="_blank" href="my-account-personal-info.html">My Account - Personal Info</a></li>
                 <br>
                 <li><a target="_blank" href="create-blog.html">Create Blog</a></li>
                 <li><a href="create-recipe.html" target="_blank">Create recipe</a></li>
                 <li><a href="seller-acc-product-list-addproduct.html" target="_blank">Seller Account / Product list - Add
-                    Product</a></li>
+                    Product</a></li> -->
             </ul>
-            <ul>
+            <!-- <ul>
                 <li>
                     <h3>Updated pages</h3>
                 </li>
@@ -41,7 +45,7 @@
                     <li><a href="admin-newsletters-preview-v2.html" target="_blank">Admin / Newsletters/ preview v2</a></li>
                     <li><a href="admin-newsletters-options.html" target="_blank">Admin / Newsletters/ Recipient options</a></li>
                 </li>
-            </ul>
+            </ul> -->
         </div>
         <br><br><br><br> 
         <ul>
@@ -193,7 +197,6 @@
             text-underline-offset: 5px;
         }
     </style>
-
 
     <script src="js/lib/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
